<?xml version="1.0"?>
<package format="2">
  <name>odom_tf_publisher</name>
  <version>0.0.0</version>
  <description>The odom_tf_publisher package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>

</package>
