<?xml version="1.0"?>
<package format="2">
  <name>base_footprint_publisher</name>
  <version>0.0.0</version>
  <description>The base_footprint_publisher package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>

</package>
