<?xml version="1.0"?>
<package format="2">
  <name>com_tf_publisher</name>
  <version>0.0.0</version>
  <description>The com_tf_publisher package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>

</package>
